--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         }
         .animate-spin-custom { animation: spin-slow 1s linear infinite; }
         
-        button { user-select: none; }
+        button { user-select: none; cursor: pointer; }
 
         .packing-item-done { 
             background-color: #F3F0F8 !important; 
@@ -101,7 +101,7 @@
         const db = firebase.firestore();
         const appId = "fukuoka-2026";
 
-        // SVG 圖標組件：強制 pointer-events-none 避免干擾點擊
+        // SVG 圖標組件：強制 pointer-events-none 確保不干擾點擊
         const Icon = ({ name, className = "", size = 24 }) => {
             const icons = {
                 'heart': "M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.505 4.04 3 5.5L12 21l7-7Z",
@@ -115,7 +115,8 @@
                 'plus': "M12 5v14M5 12h14",
                 'pencil': "M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z",
                 'chevron-left': "M15 18l-6-6 6-6",
-                'navigation': "M3 11l19-9-9 19-2-8-8-2z"
+                'navigation': "M3 11l19-9-9 19-2-8-8-2z",
+                'alert': "M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z M12 9v4 M12 17h.01"
             };
             return (
                 <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className={`${className} pointer-events-none`}>
@@ -155,10 +156,14 @@
                 { date: '6/5', dayName: 'FRI' }, { date: '6/6', dayName: 'SAT' }
             ];
 
+            // 詳細清單內容
             const packingListTemplate = [
-                { category: '一、必備證件', items: ['護照', '機票/訂位紀錄', '日幣現金', '旅遊保險'] },
-                { category: '二、衣物配件', items: ['日常衣物', '好走的鞋', '墨鏡/帽子'] },
-                { category: '三、3C與雜項', items: ['手機充電線', '行動電源 (手提)', 'Ruby 寶寶專區'] }
+                { category: '一、證件與金錢', items: ['護照 (正本+影本)', 'Visit Japan Web QR Code', '日幣現金', '信用卡/悠遊卡', '旅遊保險證明書'] },
+                { category: '二、Ruby 寶寶專區', items: ['足量尿布 & 濕紙巾', '奶粉分裝包 & 奶瓶', '副食品 & 寶寶零食', '寶寶餐具 & 圍兜', '手推車 & 防雨罩', '小毯子 & 換洗衣物'] },
+                { category: '三、衣物配件', items: ['換洗衣物 (3-4套)', '內衣褲 & 襪子', '舒適好走的鞋', '輕便外套 (薄)', '摺疊雨傘 & 輕便雨衣', '帽子 & 太陽眼鏡'] },
+                { category: '四、3C 數位產品', items: ['手機 & 行動電源', '充電線 & 充電頭', 'WiFi機/網卡', '降噪耳機', '相機 & 記憶卡'] },
+                { category: '五、藥品與保健', items: ['個人處方藥', '常備感冒/腸胃藥', '退燒藥/止痛藥', '防蚊液 & 止癢藥膏', 'OK繃 & 酒精棉片'] },
+                { category: '六、盥洗與清潔', items: ['牙刷 & 牙膏', '洗面乳 & 護膚品', '乾洗手 & 口罩', '衛生紙 & 生理用品'] }
             ];
 
             useEffect(() => {
@@ -226,12 +231,12 @@
                 } finally { setIsSaving(false); }
             };
 
-            // 編輯功能修復：明確傳入資料並開啟視窗
-            const handleEditPlan = (e, plan) => {
+            // 編輯功能修復：移除事件冒泡干擾，確保資料傳遞
+            const openEditModal = (e, plan) => {
                 e.preventDefault();
-                e.stopPropagation(); // 阻止事件干擾
+                e.stopPropagation(); 
                 setEditingPlan(plan);
-                setEditPlanBuffer({ time: plan.time, title: plan.title });
+                setEditPlanBuffer({ time: plan.time || '', title: plan.title || '' });
                 setIsEditingPlan(true);
             };
 
@@ -273,6 +278,7 @@
                         </div>
                     </div>
 
+                    {/* Header */}
                     <header className="kuromi-gradient text-white p-6 pt-10 rounded-b-[40px] shadow-lg text-center relative overflow-hidden">
                         <h1 className="text-4xl font-bold tracking-tighter" style={{ textShadow: '2px 2px 0px rgba(0,0,0,0.2)' }}>福岡 2026</h1>
                         <div className="flex items-center justify-center gap-2 mt-2">
@@ -336,15 +342,15 @@
                                                     <div className="flex gap-2">
                                                         <button 
                                                             type="button"
-                                                            onClick={(e) => handleEditPlan(e, plan)} 
-                                                            className="p-3 bg-purple-50 text-purple-400 rounded-full active:scale-75 border border-purple-100 touch-manipulation"
+                                                            onClick={(e) => openEditModal(e, plan)} 
+                                                            className="w-10 h-10 flex items-center justify-center bg-purple-50 text-purple-400 rounded-full active:scale-75 border border-purple-100 touch-manipulation z-10"
                                                         >
                                                             <Icon name="pencil" size={18} />
                                                         </button>
                                                         <button 
                                                             type="button"
                                                             onClick={(e) => deletePlan(e, plan.id)} 
-                                                            className="p-3 bg-red-50 text-red-400 rounded-full active:scale-75 border border-red-100 touch-manipulation"
+                                                            className="w-10 h-10 flex items-center justify-center bg-red-50 text-red-400 rounded-full active:scale-75 border border-red-100 touch-manipulation z-10"
                                                         >
                                                             <Icon name="trash" size={18} />
                                                         </button>
@@ -353,17 +359,11 @@
                                                 <h3 className="text-xl font-black text-slate-700 leading-tight">{plan.title}</h3>
                                             </div>
                                         ))}
-                                        {currentDayPlans.length === 0 && (
-                                            <div className="py-20 text-center opacity-30 text-slate-400 font-black">
-                                                目前尚無行程計畫 💜
-                                            </div>
-                                        )}
                                     </div>
                                 </div>
                             )
                         )}
 
-                        {/* 2. 記帳 */}
                         {activeTab === 'expense' && (
                             <div className="space-y-6 animate-in fade-in">
                                 <div className="bg-[#2D2727] text-white p-8 rounded-[40px] shadow-xl relative overflow-hidden">
@@ -413,7 +413,6 @@
                             </div>
                         )}
 
-                        {/* 3. 工具 */}
                         {activeTab === 'tools' && (
                             <div className="space-y-10 animate-in fade-in">
                                 <section className="text-center">
@@ -427,10 +426,11 @@
                                         </div>
                                     </div>
                                 </section>
+
                                 <section>
                                     <div className="flex items-center gap-3 mb-6 px-1">
                                         <div className="p-3 bg-pink-100 rounded-2xl text-[#FF91C1]"><Icon name="luggage" size={24} /></div>
-                                        <h3 className="text-xl font-black text-slate-800">行李清單 (單機)</h3>
+                                        <h3 className="text-xl font-black text-slate-800">行李清單 💜</h3>
                                     </div>
                                     {packingListTemplate.map((cat, idx) => (
                                         <div key={idx} className="mb-8">
@@ -450,6 +450,16 @@
                                             </div>
                                         </div>
                                     ))}
+                                    <div className="kuromi-card p-6 bg-[#2D2727] text-white border-none shadow-xl mt-4 mx-2">
+                                        <h4 className="font-bold text-[#FF91C1] mb-4 flex items-center gap-2 text-sm">
+                                            <Icon name="alert" size={16} className="text-[#FF91C1]" /> 托運與手提提醒
+                                        </h4>
+                                        <ul className="text-[11px] space-y-3 opacity-90 font-bold">
+                                            <li>● 液體：手提單件 100ml 內，需裝入透明夾鏈袋。</li>
+                                            <li>● 打火機：限 1 個且必須隨身手提，嚴禁托運。</li>
+                                            <li>● 電池：行動電源嚴禁托運，<b>務必放手提行李</b>。</li>
+                                        </ul>
+                                    </div>
                                 </section>
                             </div>
                         )}
@@ -486,7 +496,7 @@
                                     <button onClick={savePlan} disabled={isSaving} className="flex-1 kuromi-gradient text-white py-5 rounded-full font-black text-xl shadow-lg active:scale-95 disabled:opacity-50">
                                         {isSaving ? <Icon name="refresh" className="animate-spin-custom mx-auto" size={24} /> : "儲存 💜"}
                                     </button>
-                                    <button onClick={() => { setIsEditingPlan(false); setEditingPlan(null); }} className="px-8 bg-slate-100 text-slate-400 rounded-full font-black">取消</button>
+                                    <button onClick={() => { setIsEditingPlan(false); setEditingPlan(null); }} className="px-8 bg-slate-100 text-slate-400 rounded-full font-black text-sm text-center">取消</button>
                                 </div>
                             </div>
                         </div>
