--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@
                 'plus': "M12 5v14M5 12h14",
                 'pencil': "M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z",
                 'chevron-left': "M15 18l-6-6 6-6",
+                'chevron-down': "M6 9l6 6 6-6",
+                'chevron-right': "M9 18l6-6-6-6",
                 'navigation': "M3 11l19-9-9 19-2-8-8-2z",
                 'alert': "M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z M12 9v4 M12 17h.01"
             };
             return (
-                <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className={`${className} pointer-events-none`}>
+                <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className={`${className} pointer-events-none transition-all`}>
                     <path d={icons[name] || ""} />
                 </svg>
             );
@@ -136,6 +138,16 @@
             const [selectedDayIdx, setSelectedDayIdx] = useState(0);
             const [fxInput, setFxInput] = useState('');
             const exchangeRate = 0.211;
+
+            // 用於儲存行李分類的開合狀態，預設全部展開
+            const [expandedCats, setExpandedCats] = useState({
+                '一、證件與金錢': true,
+                '二、Ruby 寶寶專區': true,
+                '三、衣物配件': true,
+                '四、3C 數位產品': true,
+                '五、藥品與保健': true,
+                '六、盥洗與清潔': true
+            });
 
             const [newExpense, setNewExpense] = useState({ 
                 date: new Date().toISOString().split('T')[0], 
@@ -266,6 +278,11 @@
                 setPackingItems(prev => ({ ...prev, [itemName]: !prev[itemName] }));
             };
 
+            // 切換分類摺疊狀態
+            const toggleCategory = (catName) => {
+                setExpandedCats(prev => ({ ...prev, [catName]: !prev[catName] }));
+            };
+
             return (
                 <div className="max-w-md mx-auto min-h-screen relative pb-20">
                     {/* Toast */}
@@ -276,7 +293,6 @@
                         </div>
                     </div>
 
-                    {/* Header: 加大標題 */}
                     <header className="kuromi-gradient text-white p-6 pt-10 rounded-b-[40px] shadow-lg text-center relative overflow-hidden">
                         <h1 className="text-5xl font-bold tracking-tighter" style={{ textShadow: '2px 2px 0px rgba(0,0,0,0.2)' }}>福岡 2026</h1>
                         <div className="flex items-center justify-center gap-2 mt-2">
@@ -285,7 +301,6 @@
                         </div>
                     </header>
 
-                    {/* 導覽列：加大字體 */}
                     <nav className="flex bg-white/95 backdrop-blur-lg sticky top-0 z-50 px-4 border-b-4 border-purple-50 shadow-sm">
                         <button onClick={() => { setActiveTab('itinerary'); setItineraryView('list'); }} className={`flex-1 py-4 font-black text-lg transition-all ${activeTab === 'itinerary' ? 'tab-active' : 'text-slate-400'}`}>行程</button>
                         <button onClick={() => setActiveTab('expense')} className={`flex-1 py-4 font-black text-lg transition-all ${activeTab === 'expense' ? 'tab-active' : 'text-slate-400'}`}>記帳</button>
@@ -296,10 +311,7 @@
                         {activeTab === 'itinerary' && (
                             itineraryView === 'list' ? (
                                 <div className="space-y-6 animate-in fade-in">
-                                    <h2 className="text-2xl font-black text-slate-800 px-1 flex justify-between items-center">
-                                        冒險計畫表 💜
-                                        {!user && <span className="text-[10px] animate-pulse text-purple-400">連線中...</span>}
-                                    </h2>
+                                    <h2 className="text-2xl font-black text-slate-800 px-1 flex justify-between items-center">冒險計畫表 💜</h2>
                                     <div className="grid grid-cols-2 gap-4">
                                         {dates.map((day, idx) => (
                                             <div key={day.date} onClick={() => { setSelectedDayIdx(idx); setItineraryView('detail'); }} 
@@ -339,20 +351,8 @@
                                                 <div className="flex justify-between items-center mb-4">
                                                     <span className="text-xs font-black text-white bg-slate-800 px-3 py-1 rounded-full">{plan.time}</span>
                                                     <div className="flex gap-1">
-                                                        <button 
-                                                            type="button"
-                                                            onClick={(e) => openEditModal(e, plan)} 
-                                                            className="w-12 h-12 flex items-center justify-center bg-purple-50 text-purple-400 rounded-full active:scale-75 border border-purple-100 touch-manipulation z-10"
-                                                        >
-                                                            <Icon name="pencil" size={20} />
-                                                        </button>
-                                                        <button 
-                                                            type="button"
-                                                            onClick={(e) => deletePlan(e, plan.id)} 
-                                                            className="w-12 h-12 flex items-center justify-center bg-red-50 text-red-400 rounded-full active:scale-75 border border-red-100 touch-manipulation z-10"
-                                                        >
-                                                            <Icon name="trash" size={20} />
-                                                        </button>
+                                                        <button type="button" onClick={(e) => openEditModal(e, plan)} className="w-12 h-12 flex items-center justify-center bg-purple-50 text-purple-400 rounded-full active:scale-75 border border-purple-100"><Icon name="pencil" size={20} /></button>
+                                                        <button type="button" onClick={(e) => deletePlan(e, plan.id)} className="w-12 h-12 flex items-center justify-center bg-red-50 text-red-400 rounded-full active:scale-75 border border-red-100"><Icon name="trash" size={20} /></button>
                                                     </div>
                                                 </div>
                                                 <h3 className="text-2xl font-black text-slate-700 leading-tight">{plan.title}</h3>
@@ -363,7 +363,6 @@
                             )
                         )}
 
-                        {/* 2. 記帳 */}
                         {activeTab === 'expense' && (
                             <div className="space-y-6 animate-in fade-in">
                                 <div className="bg-[#2D2727] text-white p-8 rounded-[40px] shadow-xl relative overflow-hidden">
@@ -413,13 +412,12 @@
                             </div>
                         )}
 
-                        {/* 3. 工具：加大行李清單標題 */}
                         {activeTab === 'tools' && (
                             <div className="space-y-10 animate-in fade-in">
                                 <section className="text-center">
                                     <div className="bg-white rounded-[40px] border-4 border-[#9D76C1] p-8 shadow-xl relative">
                                         <Icon name="hotel" size={40} className="text-purple-200 mx-auto mb-2 animate-bounce" />
-                                        <h3 className="text-3xl font-black mb-1 text-[#2D2727]">博多西鐵 CROOM</h3>
+                                        <h3 className="text-2xl font-black mb-1 text-[#2D2727]">博多西鐵 CROOM</h3>
                                         <p className="text-[10px] text-slate-400 mb-6 font-black tracking-widest">博多祇園櫛田神社前站</p>
                                         <div className="flex gap-4">
                                             <button onClick={() => window.open('https://www.google.com/maps/search/?api=1&query=博多祇園櫛田神社前西鐵克魯姆酒店','_blank')} className="flex-1 kuromi-gradient text-white py-4 rounded-2xl font-black text-sm shadow-md">地圖定位</button>
@@ -433,72 +431,71 @@
                                         <div className="p-3 bg-pink-100 rounded-2xl text-[#FF91C1]"><Icon name="luggage" size={24} /></div>
                                         <h3 className="text-2xl font-black text-slate-800">行李清單 💜</h3>
                                     </div>
-                                    {packingListTemplate.map((cat, idx) => (
-                                        <div key={idx} className="mb-8">
-                                            <p className="text-xs font-black text-[#9D76C1] mb-4 px-3 border-l-4 border-[#9D76C1] ml-2 uppercase tracking-widest">{cat.category}</p>
-                                            <div className="space-y-3 px-2">
-                                                {cat.items.map(item => {
-                                                    const isDone = packingItems[item] === true;
-                                                    return (
-                                                        <div key={item} onClick={() => togglePacking(item)} className={`kuromi-card p-4 flex items-center gap-4 active:scale-95 ${isDone ? 'packing-item-done' : ''}`}>
-                                                            <div className={`w-8 h-8 rounded-xl border-2 flex items-center justify-center transition-all ${isDone ? 'bg-[#9D76C1] border-transparent' : 'border-[#E2D9F3]'}`}>
-                                                                {isDone && <Icon name="check" className="text-white" size={16} />}
-                                                            </div>
-                                                            <span className={`text-lg font-black text-slate-700 ${isDone ? 'packing-text-done' : ''}`}>{item}</span>
-                                                        </div>
-                                                    );
-                                                })}
+                                    {packingListTemplate.map((cat, idx) => {
+                                        const isExpanded = expandedCats[cat.category];
+                                        return (
+                                            <div key={idx} className="mb-6">
+                                                {/* 🛠️ 修復點：加大分類標題並支援點擊收合 */}
+                                                <div 
+                                                    onClick={() => toggleCategory(cat.category)}
+                                                    className="flex items-center justify-between bg-white/50 p-4 rounded-3xl active:bg-purple-100 transition-all cursor-pointer"
+                                                >
+                                                    <p className="text-xl font-black text-[#8A63B3] border-l-8 border-[#9D76C1] px-4 uppercase tracking-wide">
+                                                        {cat.category}
+                                                    </p>
+                                                    <Icon name={isExpanded ? "chevron-down" : "chevron-right"} size={24} className="text-purple-300" />
+                                                </div>
+                                                
+                                                {/* 根據狀態顯示或隱藏清單 */}
+                                                {isExpanded && (
+                                                    <div className="space-y-3 px-2 mt-4 animate-in fade-in slide-in-from-top-2 duration-300">
+                                                        {cat.items.map(item => {
+                                                            const isDone = packingItems[item] === true;
+                                                            return (
+                                                                <div key={item} onClick={() => togglePacking(item)} className={`kuromi-card p-4 flex items-center gap-4 active:scale-95 ${isDone ? 'packing-item-done' : ''}`}>
+                                                                    <div className={`w-8 h-8 rounded-xl border-2 flex items-center justify-center transition-all ${isDone ? 'bg-[#9D76C1] border-transparent' : 'border-[#E2D9F3]'}`}>
+                                                                        {isDone && <Icon name="check" className="text-white" size={16} />}
+                                                                    </div>
+                                                                    <span className={`text-lg font-black text-slate-700 ${isDone ? 'packing-text-done' : ''}`}>{item}</span>
+                                                                </div>
+                                                            );
+                                                        })}
+                                                    </div>
+                                                )}
                                             </div>
-                                        </div>
-                                    ))}
+                                        );
+                                    })}
                                 </section>
                             </div>
                         )}
                     </div>
 
-                    {/* 行程編輯彈窗 */}
                     {isEditingPlan && (
                         <div className="fixed inset-0 z-[110] modal-mask flex items-center justify-center p-6">
                             <div className="bg-white w-full rounded-[40px] p-10 shadow-2xl space-y-8 border-8 border-purple-50 animate-in zoom-in">
-                                <h3 className="text-3xl font-black text-slate-800 underline decoration-pink-300 decoration-4 underline-offset-4 text-center">
-                                    {editingPlan ? '修改計畫 ✏️' : '新增計畫 ✏️'}
-                                </h3>
+                                <h3 className="text-3xl font-black text-slate-800 underline decoration-pink-300 decoration-4 underline-offset-4 text-center">{editingPlan ? '修改計畫 ✏️' : '新增計畫 ✏️'}</h3>
                                 <div className="space-y-6 text-left">
                                     <div>
                                         <label className="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-1">預計時間</label>
-                                        <input 
-                                            value={editPlanBuffer.time} 
-                                            onChange={(e) => setEditPlanBuffer({...editPlanBuffer, time: e.target.value})} 
-                                            placeholder="14:30" 
-                                            className="w-full border-2 border-purple-50 p-4 text-3xl font-black focus:border-purple-400 outline-none bg-slate-50 rounded-2xl mt-1" 
-                                        />
+                                        <input value={editPlanBuffer.time} onChange={(e) => setEditPlanBuffer({...editPlanBuffer, time: e.target.value})} placeholder="14:30" className="w-full border-2 border-purple-50 p-4 text-3xl font-black focus:border-purple-400 outline-none bg-slate-50 rounded-2xl mt-1" />
                                     </div>
                                     <div>
                                         <label className="text-[10px] font-black text-slate-400 uppercase tracking-widest ml-1">計畫內容</label>
-                                        <input 
-                                            value={editPlanBuffer.title} 
-                                            onChange={(e) => setEditPlanBuffer({...editPlanBuffer, title: e.target.value})} 
-                                            placeholder="要去哪裡呢？" 
-                                            className="w-full border-2 border-purple-50 p-4 text-3xl font-black focus:border-purple-400 outline-none bg-slate-50 rounded-2xl mt-1" 
-                                        />
+                                        <input value={editPlanBuffer.title} onChange={(e) => setEditPlanBuffer({...editPlanBuffer, title: e.target.value})} placeholder="要去哪裡呢？" className="w-full border-2 border-purple-50 p-4 text-2xl font-black focus:border-purple-400 outline-none bg-slate-50 rounded-2xl mt-1" />
                                     </div>
                                 </div>
                                 <div className="flex gap-4 pt-2">
-                                    <button onClick={savePlan} disabled={isSaving} className="flex-1 kuromi-gradient text-white py-5 rounded-full font-black text-2xl shadow-lg active:scale-95 disabled:opacity-50">
-                                        {isSaving ? <Icon name="refresh" className="animate-spin-custom mx-auto" size={24} /> : "儲存 💜"}
-                                    </button>
+                                    <button onClick={savePlan} disabled={isSaving} className="flex-1 kuromi-gradient text-white py-5 rounded-full font-black text-2xl shadow-lg active:scale-95 disabled:opacity-50">{isSaving ? <Icon name="refresh" className="animate-spin-custom mx-auto" size={24} /> : "儲存 💜"}</button>
                                     <button onClick={() => { setIsEditingPlan(false); setEditingPlan(null); }} className="px-8 bg-slate-100 text-slate-400 rounded-full font-black text-sm text-center">取消</button>
                                 </div>
                             </div>
                         </div>
                     )}
-
                     <div className="fixed bottom-0 left-0 right-0 h-4 kuromi-gradient z-[60]" />
                 </div>
             );
         };
 
-        // 確保 DOM 準備好後再執行
         window.addEventListener('DOMContentLoaded', () => {
             const rootEl = document.getElementById('root');
             if (rootEl) {
