--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button { -webkit-appearance: none; margin: 0; }
 
-        /* 適配四個頁籤的導覽列微調 */
         .nav-btn { font-size: 0.95rem; }
     </style>
 </head>
@@ -124,7 +123,8 @@
                 'sparkles': "M12 3l1.912 5.886L21 10.8l-5.176 3.914L17.738 21 12 17.114 6.262 21l1.914-6.286L3 10.8l7.088-1.914L12 3z",
                 'shopping': "M6 2L3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4H6zm-2 4h16M16 10a4 4 0 0 1-8 0",
                 'phone': "M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z",
-                'map-pinned': "M12 22s-8-4.5-8-11.8A8 8 0 0 1 12 2a8 8 0 0 1 8 8.2c0 7.3-8 11.8-8 11.8z M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"
+                'map-pinned': "M12 22s-8-4.5-8-11.8A8 8 0 0 1 12 2a8 8 0 0 1 8 8.2c0 7.3-8 11.8-8 11.8z M12 13a3 3 0 1 0 0-6 3 3 0 0 0 0 6z",
+                'utensils': "M3 2v7c0 1.1.9 2 2 2h4c1.1 0 2-.9 2-2V2M7 2v20M21 15V2v0a5 5 0 0 0-5 5v6c0 1.1.9 2 2 2h3Zm0 0v7"
             };
             return (
                 <svg width={size} height={size} viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2.5" strokeLinecap="round" strokeLinejoin="round" className={`${className} pointer-events-none transition-all`}>
@@ -151,6 +151,12 @@
                 '一、證件與金錢': true, '二、Ruby 寶寶專區': true, '三、衣物配件': true,
                 '四、3C 數位產品': true, '五、藥品與保健': true, '六、盥洗與清潔': true
             });
+
+            // 🛠️ 景點與美食清單資料 (根據連結與福岡熱門點整理)
+            const mapSpotList = [
+                { category: '熱門景點 ⛩️', items: ['博多運河城', '櫛田神社', '太宰府天滿宮', '福岡城跡/大濠公園', '福岡塔', 'LaLaport 福岡 (鋼彈)', '海之中道海濱公園'] },
+                { category: '家族美食 🥩', items: ['燒肉 大東園', '一蘭拉麵 總店', '博多華味鳥 (水炊鍋)', '元祖博多明太子飯', '博多牛雜鍋 おおやま', 'bills 福岡 (鬆餅)'] }
+            ];
 
             const [newExpense, setNewExpense] = useState({ 
                 date: new Date().toISOString().split('T')[0], payer: 'KCY', item: '', amount: '' 
@@ -226,6 +232,11 @@
 
             const showToast = (msg) => { setToast({ show: true, msg }); setTimeout(() => setToast({ show: false, msg: '' }), 3000); };
 
+            const openMap = (q) => {
+                const url = `https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(q)}`;
+                window.open(url, '_blank');
+            };
+
             const addExpense = async () => {
                 if (!newExpense.item.trim() || isNaN(parseFloat(newExpense.amount)) || !user) return;
                 setIsSaving(true);
@@ -259,6 +270,8 @@
             const toggleWish = async (id, currentStatus) => { await db.collection(`artifacts/${appId}/public/data/wishlist`).doc(id).update({ done: !currentStatus }); };
 
             const deleteItem = async (col, id) => { if(window.confirm("確定刪除？")) await db.collection(`artifacts/${appId}/public/data/${col}`).doc(id).delete(); showToast("已移除"); };
+
+            const toggleCategory = (catName) => { setExpandedCats(prev => ({ ...prev, [catName]: !prev[catName] })); };
 
             return (
                 <div className="max-w-md mx-auto min-h-screen relative pb-20">
@@ -330,15 +343,14 @@
                             )
                         )}
 
-                        {/* 🛠️ 新增：地圖區域 */}
+                        {/* 🛠️ 地圖區域：新增景點與美食地點清單 */}
                         {activeTab === 'map' && (
                             <div className="space-y-8 animate-in fade-in">
-                                <h2 className="text-2xl font-black text-slate-800 px-1 flex items-center gap-3 italic underline decoration-pink-300 decoration-4 underline-offset-4">景點/美食地圖 🗺️</h2>
+                                <h2 className="text-2xl font-black text-slate-800 px-1 flex items-center gap-3 italic underline decoration-pink-300 decoration-4 underline-offset-4 tracking-wider">景點/美食地圖 🗺️</h2>
                                 
-                                {/* 原本行程下方的按鈕移至此處 */}
                                 <div className="bg-white rounded-[40px] p-8 shadow-xl border-4 border-purple-50 space-y-6">
                                     <p className="text-lg font-black text-slate-600 leading-relaxed">
-                                        這是我為 SHEN 家族收藏的福岡景點與美食地圖，點擊下方按鈕即可開啟 Google 地圖查看詳細位置 💜
+                                        這是我為 SHEN 家族收藏的福岡地圖，點擊下方按鈕即可開啟 Google 地圖 💜
                                     </p>
                                     <button 
                                         onClick={() => window.open('https://maps.app.goo.gl/pd5Mgn8orC6EG7dc6', '_blank')} 
@@ -346,19 +358,36 @@
                                     >
                                         <Icon name="map-pinned" size={32} className="text-pink-400" />
                                         <div className="text-left">
-                                            <span className="block font-black text-2xl tracking-wider">開啟地圖行程</span>
-                                            <span className="text-[10px] font-bold opacity-60 uppercase tracking-widest">Open Google Maps</span>
+                                            <span className="block font-black text-2xl tracking-wider">開啟地圖清單</span>
+                                            <span className="text-[10px] font-bold opacity-60 uppercase tracking-widest">Google Maps List</span>
                                         </div>
                                     </button>
                                 </div>
 
-                                <div className="grid grid-cols-1 gap-4">
-                                    <div className="bg-purple-50 p-6 rounded-[30px] border-2 border-dashed border-purple-200">
-                                        <h4 className="font-black text-purple-600 mb-2 flex items-center gap-2"><Icon name="sparkles" size={16} /> 小撇步</h4>
-                                        <p className="text-sm text-slate-500 font-bold leading-relaxed">
-                                            在地圖中點擊「已儲存」，可以快速過濾出我們這次計畫要去的所有點唷！
-                                        </p>
-                                    </div>
+                                {/* 🛠️ 新增地點清單區域 */}
+                                <div className="space-y-8 pb-10">
+                                    {mapSpotList.map((group, idx) => (
+                                        <div key={idx} className="space-y-4">
+                                            <h3 className="text-xl font-black text-[#8A63B3] px-4 flex items-center gap-2">
+                                                <Icon name={idx === 0 ? "sparkles" : "utensils"} size={20} className="text-[#FF91C1]" />
+                                                {group.category}
+                                            </h3>
+                                            <div className="grid grid-cols-1 gap-3 px-2">
+                                                {group.items.map((item, i) => (
+                                                    <div 
+                                                        key={i} 
+                                                        onClick={() => openMap(item)}
+                                                        className="kuromi-card p-5 flex items-center justify-between active:scale-95 transition-all shadow-sm border-2 border-purple-50 hover:bg-purple-50/30"
+                                                    >
+                                                        <span className="text-lg font-black text-slate-700">{item}</span>
+                                                        <div className="p-3 bg-purple-50 rounded-2xl text-purple-400">
+                                                            <Icon name="navigation" size={18} />
+                                                        </div>
+                                                    </div>
+                                                ))}
+                                            </div>
+                                        </div>
+                                    ))}
                                 </div>
                             </div>
                         )}
@@ -425,12 +454,11 @@
                                         );
                                     })}
                                 </section>
-
+                                
                                 <section className="bg-red-50 p-8 rounded-[40px] border-2 border-red-100">
                                     <h4 className="font-bold text-red-600 mb-4 flex items-center gap-2"><Icon name="alert" size={20} /> 緊急應變 🚨</h4>
                                     <div className="space-y-4">
                                         <div className="flex justify-between items-center bg-white p-4 rounded-2xl shadow-sm"><div><p className="text-xs text-slate-400 font-bold uppercase">駐日代表處 (TECO)</p><p className="text-lg font-black text-slate-800">03-3280-7811</p></div><a href="tel:03-3280-7811" className="bg-red-500 text-white p-3 rounded-full active:scale-90"><Icon name="phone" size={18} /></a></div>
-                                        <div className="text-[11px] text-red-700 font-bold tracking-wider px-2">● 緊急事件 (失竊/受傷) 可撥 110/119 (日語/英語)</div>
                                     </div>
                                 </section>
                             </div>
